<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".VerDatos">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_nombre" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_tema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_tema" />

        <TextView
            android:id="@+id/textView_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_fecha" />

        <ImageView
            android:id="@+id/imageView_tema"
            android:layout_width="402dp"
            android:layout_height="390dp"
            android:contentDescription="@string/imageView_tema"
            app:srcCompat="@drawable/planta" />

        <Button
            android:id="@+id/button_regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_regresar" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </TableRow>
</TableLayout>